--- a/app/views/HomeView.html
+++ b/app/views/HomeView.html
@@ -3,10 +3,17 @@
     <div class="col-12">
       <h1 class="text-center">Welcome to Gregslist!</h1>
     </div>
-    <div class="col-12">
+    <div class="col-12 d-flex flex-column">
       <div class="text-center">
         <a href="#/cars">
           <button class="btn btn-success fs-4">Cars 🏎️</button>
+        </a>
+      </div>
+    </div>
+    <div class="col-12 d-flex flex-column">
+      <div class="text-center">
+        <a href="#/houses">
+          <button class="btn btn-success fs-4 my-3">Houses 🏠</button>
         </a>
       </div>
     </div>
