--- a/app/views/HousesView.html
+++ b/app/views/HousesView.html
@@ -3,8 +3,9 @@
     <div class="col-12">
       <h1 class="text-center">Houses</h1>
     </div>
-    <div class="m-3 px-3">
+    <div class="m-3 px-3 ">
       <form onsubmit="app.HousesController.createHouse()">
+        <div id="houseForm" class="hidden">
         <div class="mb-3">
           <label for="description" class="form-label">House Description</label>
           <input
@@ -100,6 +101,7 @@
         </div>
         <div class="text-end">
           <button class="btn btn-primary" type="submit">Submit</button>
+        </div>
         </div>
       </form>
     </div>
